# pedestrian_tracking_and_localizaiton

./: .gitignore  README.md
cmake/: util.cmake
cmake/modules/: FindGflags.cmake  FindGlog.cmake  FindWampcc.cmake
python/reid-strong-baseline/configs/: softmax_triplet_with_center.yml
python/reid-strong-baseline/data/datasets/: eval_reid.py
python/reid-strong-baseline/engine/: inference.py
python/reid-strong-baseline/modeling/: __init__.py  baseline.py
python/reid-strong-baseline/pyx_scripts/: pyx_util.py  pyx_util_test.py  stupid_test.py
python/reid-strong-baseline/ros/: pub.py  sub.py
python/reid-strong-baseline/tools/: new_test.py  test.py
python/reid-strong-baseline/utils/: reid_metric.py
src/detector/: CMakeLists.txt  package.xml
src/detector/config/: config.yaml
src/detector/include/detector/: detector.hpp  timer.hpp  type.h
src/detector/include/pedestrain_tracking_and_localizaiton/: detector.hpp  util.h
src/detector/launch/: detector_test.launch  tracker.launch
src/detector/msg/: ImageBlock.msg
src/detector/src/: detector_test.cpp  tracker.cpp
src/ptl_detector/: CMakeLists.txt  package.xml
src/ptl_detector/app/: detector.cc
src/ptl_detector/asset/: .gitignore  yolov3-tiny.cfg  yolov3.cfg  yolov4-tiny-usv.cfg  yolov4.cfg
src/ptl_detector/config/: config.yaml
src/ptl_detector/include/ptl_detector/: detector.hpp  yolo_detector.hpp
src/ptl_detector/include/ptl_detector/detector/: yolo_object_detector.h
src/ptl_detector/include/ptl_detector/geometry/: box.h  point.h
src/ptl_detector/include/ptl_detector/interface/: base_color_detector.h  base_inference.h  base_object_detector.h
src/ptl_detector/include/ptl_detector/util/: log.h  macros.h  ros_util.h  util.h
src/ptl_detector/launch/: detector.launch
src/ptl_detector/src/: detector.cpp
src/ptl_detector/src/detector/: yolo_object_detector.cc
src/ptl_detector/src/util/: ros_util.cc
src/ptl_msgs/: CMakeLists.txt  package.xml
src/ptl_msgs/msg/: DeadTracker.msg  FrontEndInterface.msg  ImageBlock.msg  ReidInfo.msg
src/ptl_node/: CMakeLists.txt  package.xml
src/ptl_node/app/: main.cpp
src/ptl_node/config/: config.yaml
src/ptl_node/include/ptl_node/: node.h
src/ptl_node/launch/: node.launch
src/ptl_node/src/: node.cpp
src/ptl_reid/: CMakeLists.txt  package.xml
src/ptl_reid/config/: cfg.yaml  config.yaml
src/ptl_reid/launch/: reid.launch
src/ptl_reid/script/: cal_prob.py
src/ptl_reid/src/: baseline.py  inference.py  model.py  model_to_onnx.py  ptl_reid.py  reid_config.py  reid_database.py  test.py  utils.py
src/ptl_reid_cpp/: CMakeLists.txt  package.xml
src/ptl_reid_cpp/app/: main.cpp
src/ptl_reid_cpp/config/: config.yaml
src/ptl_reid_cpp/include/ptl_reid_cpp/: reid.h  reid_database.h  reid_inference.h  util.h
src/ptl_reid_cpp/launch/: reid.launch
src/ptl_reid_cpp/src/: reid.cpp  reid_database.cpp  reid_inference.cpp
src/ptl_tracker/: CMakeLists.txt  package.xml
src/ptl_tracker/app/: main.cpp
src/ptl_tracker/config/: config.yaml  tf.yaml
src/ptl_tracker/include/ptl_tracker/: association_type.hpp  kalman_filter.h  kalman_filter_3d.h  local_object.h  optical_flow.h  point_cloud_processor.h  tracker.h  type.h  util.h
src/ptl_tracker/launch/: tf_publisher.launch  tracker.launch
src/ptl_tracker/rviz/: debug.rviz  full_vis.rviz  full_vis_2.rviz
src/ptl_tracker/src/: kalman_filter.cpp  kalman_filter_3d.cpp  local_object.cpp  main.cpp  optical_flow.cpp  point_cloud_processor.cpp  test.cpp  tf_publisher.cpp  tracker.cpp
src/ptl_tracker/test/: pc_experienment.cpp
src/tracker/: CMakeLists.txt  README.md  package.xml
src/tracker/src/: tracker.cpp
