<?xml version="1.0"?>
<package format="2">
    <name>detector</name>
    <version>1.0.0</version>
    <description>none</description>
    <maintainer email="yxpeng@udel.edu">Yuxiang Peng</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>usfs_common</build_depend>
    <build_depend>usfs_inference</build_depend>
    <build_depend>message_generation</build_depend>
    <!-- <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend> -->
    
    <exec_depend>roscpp</exec_depend>
    <exec_depend>usfs_common</exec_depend>
    <exec_depend>usfs_inference</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <!-- <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend> -->
</package>