<?xml version="1.0"?>
<package format="2">
    <name>ptl_detector</name>
    <version>1.0.0</version>
    <description>none</description>
    <maintainer email="yxpeng@udel.edu">Yuxiang Peng</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>ptl_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    
    <exec_depend>roscpp</exec_depend>
    <exec_depend>ptl_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>image_transport</exec_depend>
</package>