<?xml version="1.0"?>
<package format="2">
    <name>ptl_node</name>
    <version>1.0.0</version>
    <description>none</description>
    <maintainer email="yxpeng@udel.edu">Yuxiang Peng</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>ptl_reid_cpp</build_depend>
    <build_depend>ptl_tracker</build_depend>
    
    <exec_depend>roscpp</exec_depend>
    <exec_depend>ptl_reid_cpp</exec_depend>
    <exec_depend>ptl_tracker</exec_depend>

</package>