<?xml version="1.0"?>
<package format="2">
    <name>ptl_reid</name>
    <version>1.0.0</version>
    <description>none</description>
    <maintainer email="yxpeng@udel.edu">Yuxiang Peng</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>python-rospkg</build_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>python-rospkg</exec_depend>
</package>